k8s/base/secure-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-devsecops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insecure-devsecops-app
  template:
    metadata:
      labels:
        app: insecure-devsecops-app
    spec:
      containers:
        - name: app
          image: devsecops-vuln-app:lab
          securityContext:
            privileged: false
            runAsUser: 10001
          resources: {}
