k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: devsecops
  labels:
    app: demo-app
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
